--- a/config/macros.dtsi
+++ b/config/macros.dtsi
@@ -2,7 +2,7 @@ macro_macro_lock: macro_macro_lock{
 compatible = "zmk,behavior-macro";
 label = "macro_macro_lock";
 #binding-cells = <0>;
-bindings = <&kp LEFT_COMMAND>, <&kp LEFT_CONTROL>, <&kp Q>;
+bindings = <&kp LEFT_COMMAND &kp LEFT_CONTROL &kp Q>;
 };
 macro_quotes: macro_quotes{
 compatible = "zmk,behavior-macro";
@@ -38,5 +38,5 @@ macro_kinesis: macro_kinesis{
 compatible = "zmk,behavior-macro";
 label = "macro_kinesis";
 #binding-cells = <0>;
-bindings = <&kp LEFT_COMMAND>, <&kp LEFT_SHIFT>, <&kp X>;
+bindings = <&kp LEFT_COMMAND &kp LEFT_SHIFT &kp X>;
 };
