--- a/config/macros.dtsi
+++ b/config/macros.dtsi
@@ -1,9 +1,3 @@
-macro_macro_lock: macro_macro_lock{
-compatible = "zmk,behavior-macro";
-label = "macro_macro_lock";
-#binding-cells = <0>;
-bindings = <&macro_press &kp LEFT_COMMAND &kp LEFT_CONTROL &kp Q>;
-};
 macro_quotes: macro_quotes{
 compatible = "zmk,behavior-macro";
 label = "macro_quotes";
@@ -38,5 +32,5 @@ macro_kinesis: macro_kinesis{
 compatible = "zmk,behavior-macro";
 label = "macro_kinesis";
 #binding-cells = <0>;
-bindings = <&macro_press &kp LEFT_COMMAND &kp LEFT_SHIFT &kp X>;
+bindings = <&kp LS(K)>, <&kp I>, <&kp N>, <&kp E>, <&kp S>, <&kp I>, <&kp S>;
 };
