--- a/config/macros.dtsi
+++ b/config/macros.dtsi
@@ -34,7 +34,7 @@ label = "macro_kinesis";
 #binding-cells = <0>;
 bindings = <&kp LS(K)>, <&kp I>, <&kp N>, <&kp E>, <&kp S>, <&kp I>, <&kp S>;
 };
-macro_kinesis: macro_1password{
+macro_1password: macro_1password{
 compatible = "zmk,behavior-macro";
 label = "macro_1password";
 #binding-cells = <0>;
