--- a/config/macros.dtsi
+++ b/config/macros.dtsi
@@ -2,13 +2,13 @@ macro_opt_cmd_v: macro_opt_cmd_v{
 compatible = "zmk,behavior-macro";
 label = "macro_opt_cmd_v";
 #binding-cells = <0>;
-bindings = <&kp LALT>, <&kp LGUI>, <&kp V>;
+bindings = <&kp &macro_press LALT>, <&kp &macro_press LGUI>, <&kp V>;
 };
 macro_opt_cmd_c: macro_opt_cmd_c{
 compatible = "zmk,behavior-macro";
 label = "macro_opt_cmd_c";
 #binding-cells = <0>;
-bindings = <&kp LALT>, <&kp LGUI>, <&kp C>;
+bindings = <&kp &macro_press LALT>, <&kp &macro_press LGUI>, <&kp C>;
 };
 macro_quotes: macro_quotes{
 compatible = "zmk,behavior-macro";
