--- a/config/macros.dtsi
+++ b/config/macros.dtsi
@@ -34,3 +34,10 @@
     #binding-cells = <0>;
     bindings = <&kp LS(K)>, <&kp I>, <&kp N>, <&kp E>, <&kp S>, <&kp I>, <&kp S>;
   };
+  macro_ahk_win: macro_ahk_win {
+    wait-ms = <0>;
+    compatible = "zmk,behavior-macro";
+    label = "macro_ahk_win";
+    #binding-cells = <0>;
+    bindings = <&macro_press &kp LGUI &kp LCTRL>, <&macro_tap &kp W>, <&macro_release &kp LGUI &kp LCTRL>;
+  };
