--- a/config/macros.dtsi
+++ b/config/macros.dtsi
@@ -2,13 +2,13 @@ macro_opt_cmd_v: macro_opt_cmd_v{
 compatible = "zmk,behavior-macro";
 label = "macro_opt_cmd_v";
 #binding-cells = <0>;
-bindings = <&macro_press &kp LSHFT>, <&macro_tap &kp V &kp U>, <&macro_release &kp LSHFT>;
+bindings = <&macro_press &kp LALT &kp LGUI>, <&macro_tap &kp V>, <&macro_release &kp LALT &kp LGUI>;
 };
 macro_opt_cmd_c: macro_opt_cmd_c{
 compatible = "zmk,behavior-macro";
 label = "macro_opt_cmd_c";
 #binding-cells = <0>;
-bindings = <&macro_press &kp LALT &kp LGUI>, <&macro_tap &kp V &kp D>, <&macro_release &kp LALT &kp LGUI>;
+bindings = <&macro_press &kp LALT &kp LGUI>, <&macro_tap &kp C>, <&macro_release &kp LALT &kp LGUI>;
 };
 macro_quotes: macro_quotes{
 compatible = "zmk,behavior-macro";
