--- a/config/macros.dtsi
+++ b/config/macros.dtsi
@@ -34,3 +34,9 @@ label = "macro_kinesis";
 #binding-cells = <0>;
 bindings = <&kp LS(K)>, <&kp I>, <&kp N>, <&kp E>, <&kp S>, <&kp I>, <&kp S>;
 };
+macro_quotes: macro_crals{
+compatible = "zmk,behavior-macro";
+label = "macro_quotes";
+#binding-cells = <0>;
+bindings = <&kp LCTRL>, <&kp LALT>, <&kp LSHIFT>;
+};
