--- a/config/macros.dtsi
+++ b/config/macros.dtsi
@@ -8,25 +8,25 @@ macro_undo: macro_undo{
 compatible = "zmk,behavior-macro";
 label = "macro_undo";
 #binding-cells = <0>;
-bindings = <&kp LCTRL>, <&kp Z>;
+bindings = <&macro_press &kp LCTRL>, <&kp Z>, <&macro_release &kp LCTRL>;
 };
 macro_cut: macro_cut{
 compatible = "zmk,behavior-macro";
 label = "macro_cut";
 #binding-cells = <0>;
-bindings = <&kp LCTRL>, <&kp X>;
+bindings = <&macro_press &kpLCTRL>, <&kp X>, <&macro_release &kp LCTRL>;
 };
 macro_paste: macro_paste{
 compatible = "zmk,behavior-macro";
 label = "macro_paste";
 #binding-cells = <0>;
-bindings = <&kp LCTRL>, <&kp V>;
+bindings = <&macro_press &kp LCTRL>, <&kp V>, <&macro_release &kp LCTRL>;
 };
 macro_copy: macro_copy{
 compatible = "zmk,behavior-macro";
 label = "macro_copy";
 #binding-cells = <0>;
-bindings = <&kp LCTRL>, <&kp C>;
+bindings = <&macro_press &kp LCTRL>, <&kp C>, <&macro_release &kp LCTRL>;
 };
 macro_crals: macro_crals{
 compatible = "zmk,behavior-macro";
