--- a/config/macros.dtsi
+++ b/config/macros.dtsi
@@ -1,3 +1,9 @@
+macro_team_play: macro_team_play_x3{
+compatible = "zmk,behavior-macro";
+label = "macro_team_play";
+#binding-cells = <0>;
+bindings = <&kp T>, <&kp LS(T)>, <&kp E>, <&kp A>, <&kp M>, <&kp SPACE>, <&kp P>, <&kp L>, <&kp A>, <&kp Y>, <&kp DOT> <&kp ENTER>, <&kp T>, <&kp LS(T)>, <&kp E>, <&kp A>, <&kp M>, <&kp SPACE>, <&kp P>, <&kp L>, <&kp A>, <&kp Y>, <&kp DOT> <&kp ENTER>, <&kp T>, <&kp LS(T)>, <&kp E>, <&kp A>, <&kp M>, <&kp SPACE>, <&kp P>, <&kp L>, <&kp A>, <&kp Y>, <&kp DOT> <&kp ENTER>;
+};
 macro_team_play: macro_team_play{
 compatible = "zmk,behavior-macro";
 label = "macro_team_play";
