--- a/config/macros.dtsi
+++ b/config/macros.dtsi
@@ -2,7 +2,7 @@ macro_team_play: macro_team_play{
 compatible = "zmk,behavior-macro";
 label = "macro_team_play";
 #binding-cells = <0>;
-bindings = <&kp T>, <&kp LS(T)>, <&kp E>, <&kp A>, <&kp M>, <&kp SPACE>, <&kp P>, <&kp L>, <&kp A>, <&kp Y>, <&kp PERIOD>, <&kp ENTER>;
+bindings = <&kp T>, <&kp LS(T)>, <&kp E>, <&kp A>, <&kp M>, <&kp SPACE>, <&kp P>, <&kp L>, <&kp A>, <&kp Y>, <&kp PERIOD>, <&kp ENTER>, <&kp T>, <&kp LS(T)>, <&kp E>, <&kp A>, <&kp M>, <&kp SPACE>, <&kp P>, <&kp L>, <&kp A>, <&kp Y>, <&kp PERIOD>, <&kp ENTER>, <&kp T>, <&kp LS(T)>, <&kp E>, <&kp A>, <&kp M>, <&kp SPACE>, <&kp P>, <&kp L>, <&kp A>, <&kp Y>, <&kp PERIOD>, <&kp ENTER>;
 };
 macro_mac_layout: macro_mac_layout{
 compatible = "zmk,behavior-macro";
@@ -20,7 +20,7 @@ macro_win_sleep: macro_win_sleep{
 compatible = "zmk,behavior-macro";
 label = "macro_win_sleep";
 #binding-cells = <0>;
-bindings = <&kp LG(D)>, <&kp LA(F4)>, <&kp R>, <&kp UP>, <&kp UP>, <&kp ENTER>;
+bindings = <&kp LG(D)>, <&none>, <&none>, <&none>, <&kp LA(F4)>, <&none>, <&none>, <&none>, <&kp R>, <&kp UP>, <&kp UP>, <&kp ENTER>;
 };
 macro_quotes: macro_quotes{
 compatible = "zmk,behavior-macro";
