--- a/config/macros.dtsi
+++ b/config/macros.dtsi
@@ -1,3 +1,9 @@
+  macro_work_email: macro_work_email {
+    compatible = "zmk,behavior-macro";
+    label = "macro_work_email";
+    #binding-cells = <0>;
+    bindings = <&kp E>, <&kp X>, <&kp A>, <&kp M>, <&kp P>, <&kp L>, <&kp E>;
+  };
   macro_quotes: macro_quotes {
     compatible = "zmk,behavior-macro";
     label = "macro_quotes";
