--- a/config/macros.dtsi
+++ b/config/macros.dtsi
@@ -2,7 +2,13 @@ macro_work_email: macro_work_email{
 compatible = "zmk,behavior-macro";
 label = "macro_work_email";
 #binding-cells = <0>;
-bindings =<&kp M>, <&kp a>, <&kp r>, <&kp k>, <&kp .>, <&kp H>, <&kp a>, <&kp n>, <&kp s>, <&kp e>, <&kp n>, <&kp @>, <&kp W>, <&kp a>, <&kp r>, <&kp n>, <&kp e>, <&kp r>, <&kp M>, <&kp e>, <&kp d>, <&kp i>, <&kp a>, <&kp .>, <&kp c>, <&kp o>, <&kp m>;
+bindings = <&kp M>, <&kp a>, <&kp r>, <&kp k>, <&kp .>, <&kp H>, <&kp a>, <&kp n>, <&kp s>, <&kp e>, <&kp n>, <&kp @>, <&kp W>, <&kp a>, <&kp r>, <&kp n>, <&kp e>, <&kp r>, <&kp M>, <&kp e>, <&kp d>, <&kp i>, <&kp a>, <&kp .>, <&kp c>, <&kp o>, <&kp m>;
+};
+macro_pswrd1: macro_pswrd1{
+compatible = "zmk,behavior-macro";
+label = "macro_pswrd1";
+#binding-cells = <0>;
+bindings = <&kp W>, <&kp e>, <&kp a>, <&kp r>, <&kp e>, <&kp g>, <&kp r>, <&kp e>, <&kp a>, <&kp t>, <&kp @>, <&kp 4>;
 };
 macro_quotes: macro_quotes{
 compatible = "zmk,behavior-macro";
