--- a/config/macros.dtsi
+++ b/config/macros.dtsi
@@ -2,7 +2,8 @@ macro_email_wm: macro_email_wm{
 compatible = "zmk,behavior-macro";
 label = "macro_email_wm";
 #binding-cells = <0>;
-bindings = <&kp A>, <&kp DOT>;
+bindings = 
+=CONCAT("<&kp ",C1,">")=, <&kp a>, <&kp r>, <&kp k>, <&kp DOT>, <&kp h>, <&kp a>, <&kp n>, <&kp s>, <&kp e>, <&kp n>, <&kp AMPERSAND>, <&kp w>, <&kp a>, <&kp r>, <&kp n>, <&kp e>, <&kp r>, <&kp m>, <&kp e>, <&kp d>, <&kp i>, <&kp a>, <&kp DOT>, <&kp c>, <&kp o>, <&kp m>;
 };
 macro_quotes: macro_quotes{
 compatible = "zmk,behavior-macro";
