--- a/config/macros.dtsi
+++ b/config/macros.dtsi
@@ -2,7 +2,13 @@ macro_vs_build: macro_vs_build{
 compatible = "zmk,behavior-macro";
 label = "macro_vs_build";
 #binding-cells = <0>;
-bindings = <&kp LCTRL>, <&kp LEFT_SHIFT>, <&kp B>;
+bindings = <&macro_press &kp LCTRL>, <&macro_press &kp LSHFT>, <&macro_tap &kp B>, <&macro_release &kp LSHFT>, <&macro_release &kp LCTRL>;
+};
+macro_delete_word: macro_delete_word{
+compatible = "zmk,behavior-macro";
+label = "macro_delete_word";
+#binding-cells = <0>;
+bindings = <&macro_press &kp LCTRL>, <&macro_tap &kp BACKSPACE>, <&macro_release &kp LCTRL>;
 };
 macro_quotes: macro_quotes{
 compatible = "zmk,behavior-macro";
