adding some more window manager keys

--- a/config/boards/arm/adv360/adv360_right_defconfig
+++ b/config/boards/arm/adv360/adv360_right_defconfig
@@ -49,7 +49,7 @@ CONFIG_LED_PWM=y
 CONFIG_ZMK_BACKLIGHT=y
 CONFIG_ZMK_BACKLIGHT_AUTO_OFF_IDLE=y
 
-CONFIG_ZMK_HID_REPORT_TYPE_NKRO=y
+CONFIG_ZMK_HID_REPORT_TYPE_NKRO=n
 CONFIG_ZMK_HID_CONSUMER_REPORT_USAGES_BASIC=y
 
 CONFIG_USB_DEVICE_VID=0x29EA
@@ -57,11 +57,7 @@ CONFIG_USB_DEVICE_PID=0x0362
 CONFIG_USB_DEVICE_MANUFACTURER="Kinesis Corporation"
 
 # Turn on logging, and set ZMK logging to debug output
-CONFIG_LOG=y
-CONFIG_ZMK_USB_LOGGING=y
-
-
-
-
+CONFIG_LOG=n
+CONFIG_ZMK_USB_LOGGING=n
 
 CONFIG_BUILD_OUTPUT_UF2=y
