--- a/config/boards/arm/adv360/adv360_left_defconfig
+++ b/config/boards/arm/adv360/adv360_left_defconfig
@@ -50,7 +50,7 @@ CONFIG_LED_PWM=y
 CONFIG_ZMK_BACKLIGHT=y
 CONFIG_ZMK_BACKLIGHT_AUTO_OFF_IDLE=y
 
-CONFIG_ZMK_HID_REPORT_TYPE_NKRO=y
+CONFIG_ZMK_HID_REPORT_TYPE_NKRO=n
 CONFIG_ZMK_HID_CONSUMER_REPORT_USAGES_BASIC=y
 
 CONFIG_USB_DEVICE_VID=0x29EA
@@ -59,8 +59,8 @@ CONFIG_USB_DEVICE_MANUFACTURER="Kinesis Corporation"
 CONFIG_BT_DIS_MANUF="Kinesis Corporation"
 
 # Turn on logging, and set ZMK logging to debug output
-CONFIG_LOG=y
-CONFIG_ZMK_USB_LOGGING=y
+CONFIG_LOG=n
+CONFIG_ZMK_USB_LOGGING=n
 
 
 
