--- a/config/macros.dtsi
+++ b/config/macros.dtsi
@@ -10,6 +10,12 @@ label = "macro_delete_word";
 #binding-cells = <0>;
 bindings = <&macro_press &kp LCTRL>, <&macro_tap &kp BACKSPACE>, <&macro_release &kp LCTRL>;
 };
+macro_delete_word_mac: macro_delete_word_mac{
+compatible = "zmk,behavior-macro";
+label = "macro_delete_word_mac";
+#binding-cells = <0>;
+bindings = <&macro_press &kp LEFT_GUI>, <&macro_tap &kp BACKSPACE>, <&macro_release &kp LEFT_GUI>;
+};
 macro_quotes: macro_quotes{
 compatible = "zmk,behavior-macro";
 label = "macro_quotes";
