--- a/config/macros.dtsi
+++ b/config/macros.dtsi
@@ -14,7 +14,7 @@ macro_delete_word_mac: macro_delete_word_mac{
 compatible = "zmk,behavior-macro";
 label = "macro_delete_word_mac";
 #binding-cells = <0>;
-bindings = <&macro_press &kp LEFT_GUI>, <&macro_tap &kp BACKSPACE>, <&macro_release &kp LEFT_GUI>;
+bindings = <&macro_press &kp LALT>, <&macro_tap &kp BACKSPACE>, <&macro_release &kp LALT>;
 };
 macro_quotes: macro_quotes{
 compatible = "zmk,behavior-macro";
