--- a/config/macros.dtsi
+++ b/config/macros.dtsi
@@ -2,7 +2,7 @@ macro_excel_note: macro_excel_note{
 compatible = "zmk,behavior-macro";
 label = "macro_excel_note";
 #binding-cells = <0>;
-bindings = <&kp LEFT_SHIFT>, <&kp F2>;
+bindings = <&macro_press &kp LEFT_SHIFT>, <&kp F2>;
 };
 macro_quotes: macro_quotes{
 compatible = "zmk,behavior-macro";
