--- a/config/macros.dtsi
+++ b/config/macros.dtsi
@@ -2,7 +2,9 @@ macro_excel_note: macro_excel_note{
 compatible = "zmk,behavior-macro";
 label = "macro_excel_note";
 #binding-cells = <0>;
-bindings = <&macro_press &kp LEFT_SHIFT>, <&kp F2>;
+wait-ms = <40>;
+tap-ms = <40>;
+bindings = <&kp enter>, <&kp UP>, <&macro_press &kp LEFT_SHIFT>, <&kp F2>, <&macro_release &kp LEFT_SHIFT>;
 };
 macro_quotes: macro_quotes{
 compatible = "zmk,behavior-macro";
