--- a/config/macros.dtsi
+++ b/config/macros.dtsi
@@ -4,7 +4,7 @@ label = "macro_excel_note";
 #binding-cells = <0>;
 wait-ms = <90>;
 tap-ms = <90>;
-bindings = <&kp ENTER>, <&kp UP>, <&macro_press &kp LEFT_SHIFT>, <&kp F2>, <&macro_release &kp LEFT_SHIFT>;
+bindings = <&kp ENTER>, <&kp UP>, <&macro_press &kp LEFT_SHIFT>, <&macro_tap &kp F2>, <&macro_release &kp LEFT_SHIFT>;
 };
 macro_quotes: macro_quotes{
 compatible = "zmk,behavior-macro";
