--- a/config/macros.dtsi
+++ b/config/macros.dtsi
@@ -4,7 +4,7 @@ macro_lang: macro_lang {
   #binding-cells = <0>;
   bindings = <&kp LEFT_ALT>, <&kp SPACE>;
 };
-macro_alt-tab: macro_alt-tab {
+macro_alttab: macro_alttab {
   compatible = "zmk,behavior-macro";
   label = "macro_alt-tab";
   #binding-cells = <0>;
