--- a/config/west.yml
+++ b/config/west.yml
@@ -7,7 +7,7 @@ manifest:
   projects:
     - name: zmk
       remote: urob
-      revision: adv360-z3
+      revision: main
       import: app/west.yml
   self:
     path: config
