--- a/config/macros.dtsi
+++ b/config/macros.dtsi
@@ -20,25 +20,25 @@ macro_dprskp: macro_dprskp{
 compatible = "zmk,behavior-macro";
 label = "macro_dprskp";
 #binding-cells = <0>;
-bindings = <&kp PERIOD>, <&kp K>, <&kp N>, <&kp PERIOD>, <&kp S>, <&kp T>, <&kp U>, <&kp T>, <&kp T>, <&kp G>, <&kp A>, <&kp R>, <&kp T>, <&kp PERIOD>, <&kp N2>, <&kp N0>, <&kp N2>, <&kp N3>, <&kp EXCL>, <&kp C>, <&kp Y>, <&kp A>, <&kp R>, <&kp N5>, <&kp X>;
+bindings = <&kp PERIOD>, <&kp LS(K)>, <&kp LS(N)>, <&kp PERIOD>, <&kp LS(S)>, <&kp T>, <&kp U>, <&kp T>, <&kp T>, <&kp G>, <&kp A>, <&kp R>, <&kp T>, <&kp PERIOD>, <&kp N2>, <&kp N0>, <&kp N2>, <&kp N3>, <&kp EXCL>, <&kp C>, <&kp Y>, <&kp A>, <&kp R>, <&kp N5>, <&kp X>;
 };
 macro_pw1p: macro_pw1p{
 compatible = "zmk,behavior-macro";
 label = "macro_pw1p";
 #binding-cells = <0>;
-bindings = <&kp N8>, <&kp W>, <&kp N>, <&kp S>, <&kp U>, <&kp M>, <&kp W>, <&kp L>, <&kp C>, <&kp Y>, <&kp A>, <&kp R>, <&kp N5>, <&kp X>;
+bindings = <&kp N8>, <&kp LS(W)>, <&kp LS(N)>, <&kp LS(S)>, <&kp U>, <&kp LS(M)>, <&kp W>, <&kp LS(L)>, <&kp C>, <&kp Y>, <&kp A>, <&kp R>, <&kp N5>, <&kp X>;
 };
 macro_dprspw: macro_dprspw{
 compatible = "zmk,behavior-macro";
 label = "macro_dprspw";
 #binding-cells = <0>;
-bindings = <&kp PERIOD>, <&kp K>, <&kp N>, <&kp PERIOD>, <&kp S>, <&kp T>, <&kp U>, <&kp T>, <&kp T>, <&kp G>, <&kp A>, <&kp R>, <&kp T>, <&kp PERIOD>, <&kp N2>, <&kp N0>, <&kp N2>, <&kp N3>, <&kp EXCL>;
+bindings = <&kp PERIOD>, <&kp LS(K)>, <&kp LS(N)>, <&kp PERIOD>, <&kp LS(S)>, <&kp T>, <&kp U>, <&kp T>, <&kp T>, <&kp G>, <&kp A>, <&kp R>, <&kp T>, <&kp PERIOD>, <&kp N2>, <&kp N0>, <&kp N2>, <&kp N3>, <&kp EXCL>;
 };
 macro_dprswin: macro_dprswin{
 compatible = "zmk,behavior-macro";
 label = "macro_dprswin";
 #binding-cells = <0>;
-bindings = <&kp B>, <&kp N8>, <&kp N9>, <&kp S>, <&kp D>, <&kp K>, <&kp TAB>, <&kp PERIOD>, <&kp K>, <&kp N>, <&kp PERIOD>, <&kp S>, <&kp T>, <&kp U>, <&kp T>, <&kp T>, <&kp G>, <&kp A>, <&kp R>, <&kp T>, <&kp PERIOD>, <&kp N2>, <&kp N0>, <&kp N2>, <&kp N3>, <&kp EXCL>;
+bindings = <&kp B>, <&kp N8>, <&kp N9>, <&kp S>, <&kp D>, <&kp K>, <&kp TAB>, <&kp PERIOD>, <&kp LS(K)>, <&kp LS(N)>, <&kp PERIOD>, <&kp LS(S)>, <&kp T>, <&kp U>, <&kp T>, <&kp T>, <&kp G>, <&kp A>, <&kp R>, <&kp T>, <&kp PERIOD>, <&kp N2>, <&kp N0>, <&kp N2>, <&kp N3>, <&kp EXCL>;
 };
 macro_quotes: macro_quotes{
 compatible = "zmk,behavior-macro";
