--- a/config/macros.dtsi
+++ b/config/macros.dtsi
@@ -28,6 +28,12 @@ label = "macro_pw1p";
 #binding-cells = <0>;
 bindings = <&kp N8>, <&kp LS(W)>, <&kp LS(N)>, <&kp LS(S)>, <&kp U>, <&kp LS(M)>, <&kp W>, <&kp LS(L)>, <&kp C>, <&kp Y>, <&kp A>, <&kp R>, <&kp N5>, <&kp X>;
 };
+macro_momo: macro_momo{
+compatible = "zmk,behavior-macro";
+label = "macro_momo";
+#binding-cells = <0>;
+bindings = <&kp N8>, <&kp LS(W)>, <&kp LS(N)>, <&kp LS(S)>, <&kp U>, <&kp LS(M)>, <&kp W>, <&kp LS(L)>;
+};
 macro_dprspw: macro_dprspw{
 compatible = "zmk,behavior-macro";
 label = "macro_dprspw";
