--- a/config/macros.dtsi
+++ b/config/macros.dtsi
@@ -1,3 +1,27 @@
+  macro_macro_old_pw: macro_macro_old_pw{
+    compatible = "zmk,behavior-macro";
+    label = "macro_macro_old_pw";
+    #binding-cells = <0>;
+    bindings = <&kp LS(P)>, <&kp A>, <&kp N5>, <&kp N5>, <&kp W>, <&kp N0>, <&kp R>, <&kp D>;
+  };
+  macro_new_pw: macro_new_pw{
+    compatible = "zmk,behavior-macro";
+    label = "macro_new_pw";
+    #binding-cells = <0>;
+    bindings = <&kp LS(G)>, <&kp O>, <&kp SPACE>, <&kp LS(S)>, <&kp EXCL>, <&kp N>, <&kp N9>, <&kp SPACE>, <&kp RS(O)>, <&kp P>, <&kp N3>, <&kp R>, <&kp A>;
+  };
+  macro_macro_fred: macro_macro_fred{
+    compatible = "zmk,behavior-macro";
+    label = "macro_macro_fred";
+    #binding-cells = <0>;
+    bindings = <&kp LS(F)>, <&kp R>, <&kp E>, <&kp D>, <&kp SPACE>, <&kp LS(C)>, <&kp R>, <&kp A>, <&kp V>, <&kp E>, <&kp N>;
+  };
+  macro_devlong: macro_devlong{
+    compatible = "zmk,behavior-macro";
+    label = "macro_devlong";
+    #binding-cells = <0>;
+    bindings = <&kp D>, <&kp E>, <&kp V>, <&kp E>, <&kp L>, <&kp O>, <&kp P>, <&kp E>, <&kp R>, <&kp TAB>, <&kp S>, <&kp E>, <&kp T>, <&kp LS(I)>, <&kp K>, <&kp U>, <&kp T>, <&kp T>, <&kp AT>, <&kp NUMBER_1>, <&kp N4>, <&kp N9>, <&kp N0>, <&kp N1>;
+  };
   macro_quotes: macro_quotes {
     compatible = "zmk,behavior-macro";
     label = "macro_quotes";
