--- a/config/macros.dtsi
+++ b/config/macros.dtsi
@@ -8,7 +8,7 @@ macro_team_play_x3: macro_team_play_x3{
 compatible = "zmk,behavior-macro";
 label = "macro_team_play_x3";
 #binding-cells = <0>;
-bindings = ;
+bindings = <&macro_team_play>, <&macro_team_play>, <&macro_team_play>;
 };
 macro_team_play: macro_team_play{
 compatible = "zmk,behavior-macro";
@@ -32,7 +32,7 @@ macro_win_sleep: macro_win_sleep{
 compatible = "zmk,behavior-macro";
 label = "macro_win_sleep";
 #binding-cells = <0>;
-bindings = <&kp LG(D)>, <&kp LA(F4)>, <&kp R>, <&kp UP>, <&kp UP>, <&kp ENTER>;
+bindings = <&kp LG(D)>, <&none>, <&none>, <&none>, <&kp LA(F4)>, <&none>, <&none>, <&none>, <&kp R>, <&kp UP>, <&kp UP>, <&kp ENTER>;
 };
 macro_quotes: macro_quotes{
 compatible = "zmk,behavior-macro";
