--- a/config/macros.dtsi
+++ b/config/macros.dtsi
@@ -18,7 +18,7 @@ bindings = <&kp HASH>;
 };
 macro_pipe: macro_pipe{
 compatible = "zmk,behavior-macro";
-label = "macro_bslh";
+label = "macro_pipe";
 #binding-cells = <0>;
 bindings = <&kp LS(HASH)>;
 };
