--- a/config/boards/arm/adv360/adv360_left_defconfig
+++ b/config/boards/arm/adv360/adv360_left_defconfig
@@ -63,3 +63,5 @@ CONFIG_USB_DEVICE_MANUFACTURER="Kinesis Corporation"
 CONFIG_ZMK_HID_REPORT_TYPE_NKRO=y
 CONFIG_ZMK_HID_CONSUMER_REPORT_USAGES_BASIC=y
 CONFIG_BUILD_OUTPUT_UF2=y
+
+CONFIG_ZMK_COMBO_MAX_COMBOS_PER_KEY=50
