--- a/config/boards/arm/adv360/adv360_right_defconfig
+++ b/config/boards/arm/adv360/adv360_right_defconfig
@@ -46,6 +46,9 @@ CONFIG_ZMK_BACKLIGHT=y
 CONFIG_ZMK_BACKLIGHT_BRT_START=20
 CONFIG_ZMK_BACKLIGHT_AUTO_OFF_IDLE=y
 
+#Power configuration
+CONFIG_ZMK_IDLE_TIMEOUT=900000
+
 #Misc configuration
 CONFIG_USB_DEVICE_VID=0x29EA
 CONFIG_USB_DEVICE_PID=0x0362
