--- a/config/macros.dtsi
+++ b/config/macros.dtsi
@@ -34,3 +34,9 @@
     #binding-cells = <0>;
     bindings = <&kp LS(K)>, <&kp I>, <&kp N>, <&kp E>, <&kp S>, <&kp I>, <&kp S>;
   };
+   left_fat_arrow: left_fat_arrow {
+    compatible = "zmk,behavior-macro";
+    label = "left_fat_arrow";
+    #binding-cells = <0>;
+    bindings = <&kp T>, <&kp E>, <&kp S>, <&kp T>;
+  };
