--- a/config/macros.dtsi
+++ b/config/macros.dtsi
@@ -1,36 +1,137 @@
 macro_quotes: macro_quotes{
-compatible = "zmk,behavior-macro";
-label = "macro_quotes";
-#binding-cells = <0>;
-bindings = <&kp SQT>, <&kp SQT>, <&kp LEFT>;
+  compatible = "zmk,behavior-macro";
+  label = "macro_quotes";
+  #binding-cells = <0>;
+  bindings = <&kp SQT>, <&kp SQT>, <&kp LEFT>;
 };
+
 macro_dquotes: macro_dquotes{
-compatible = "zmk,behavior-macro";
-label = "macro_dquotes";
-#binding-cells = <0>;
-bindings = <&kp DQT>, <&kp DQT>, <&kp LEFT>;
+  compatible = "zmk,behavior-macro";
+  label = "macro_dquotes";
+  #binding-cells = <0>;
+  bindings = <&kp DQT>, <&kp DQT>, <&kp LEFT>;
 };
+
 macro_braces: macro_braces{
-compatible = "zmk,behavior-macro";
-label = "macro_braces";
-#binding-cells = <0>;
-bindings = <&kp LBRC>, <&kp RBRC>, <&kp LEFT>;
+  compatible = "zmk,behavior-macro";
+  label = "macro_braces";
+  #binding-cells = <0>;
+  bindings = <&kp LBRC>, <&kp RBRC>, <&kp LEFT>;
 };
+
 macro_parens: macro_parens{
-compatible = "zmk,behavior-macro";
-label = "macro_parens";
-#binding-cells = <0>;
-bindings = <&kp LPAR>, <&kp RPAR>, <&kp LEFT>;
+  compatible = "zmk,behavior-macro";
+  label = "macro_parens";
+  #binding-cells = <0>;
+  bindings = <&kp LPAR>, <&kp RPAR>, <&kp LEFT>;
 };
+
 macro_brackets: macro_brackets{
-compatible = "zmk,behavior-macro";
-label = "macro_brackets";
-#binding-cells = <0>;
-bindings = <&kp LBKT>, <&kp RBKT>, <&kp LEFT>;
+  compatible = "zmk,behavior-macro";
+  label = "macro_brackets";
+  #binding-cells = <0>;
+  bindings = <&kp LBKT>, <&kp RBKT>, <&kp LEFT>;
 };
+
 macro_kinesis: macro_kinesis{
-compatible = "zmk,behavior-macro";
-label = "macro_kinesis";
-#binding-cells = <0>;
-bindings = <&kp LS(K)>, <&kp I>, <&kp N>, <&kp E>, <&kp S>, <&kp I>, <&kp S>;
+  compatible = "zmk,behavior-macro";
+  label = "macro_kinesis";
+  #binding-cells = <0>;
+  bindings = <&kp LS(K)>, <&kp I>, <&kp N>, <&kp E>, <&kp S>, <&kp I>, <&kp S>;
 };
+
+parens: both_parens {
+        compatible = "zmk,behavior-macro";
+        label = "both_parens";
+        #binding-cells = <0>;
+        bindings
+            = <&macro_press &kp LSHFT>
+            , <&macro_tap &kp N8 &kp N9>
+            , <&macro_release &kp LSHFT>
+            , <&macro_tap &kp LEFT>
+            ;
+    };
+    
+    brackets: both_brackets {
+        compatible = "zmk,behavior-macro";
+        label = "both_brackets";
+        #binding-cells = <0>;
+        bindings
+            = <&macro_press &kp RALT>
+            , <&macro_tap &kp N8 &kp N9>
+            , <&macro_release &kp RALT>
+            , <&macro_tap &kp LEFT>
+            ;
+    };
+    
+    braces: both_braces {
+        compatible = "zmk,behavior-macro";
+        label = "both_braces";
+        #binding-cells = <0>;
+        bindings
+            = <&macro_press &kp RALT>
+            , <&macro_tap &kp N7 &kp N0>
+            , <&macro_release &kp RALT>
+            , <&macro_tap &kp LEFT>
+            ;
+    };
+    
+    jjensen: jjensen_email {
+        compatible = "zmk,behavior-macro";
+        label = "jjensen_email";
+        #binding-cells = <0>;
+        bindings
+            = <&macro_tap &kp J &kp O &kp H &kp A &kp N>
+            , <&macro_tap &kp RA(N2)>
+            , <&macro_tap &kp J &kp J &kp E &kp N &kp E &kp N>
+            , <&macro_tap &kp DOT &kp S &kp E>
+            ;
+    };
+    
+    user: user_id {
+        compatible = "zmk,behavior-macro";
+        label = "user_id";
+        #binding-cells = <0>;
+        bindings
+            = <&macro_tap &kp LS(A) &kp N4 &kp N2 &kp N6 &kp N8 &kp N1 &kp N9>
+            ;
+    };
+    
+    email: volvo_email {
+        compatible = "zmk,behavior-macro";
+        label = "volvo_email";
+        #binding-cells = <0>;
+        bindings
+            = <&email_1>
+            , <&email_2>
+            ;
+    };
+
+    email_1: volvo_email_1 {
+        compatible = "zmk,behavior-macro";
+        label = "volvo_email_1";
+        #binding-cells = <0>;
+        bindings
+            = <&macro_tap &kp J &kp O &kp H &kp A &kp N>
+            , <&macro_tap &kp DOT &kp J &kp E &kp N &kp S &kp E &kp N>
+            ;
+    };
+    email_2: volvo_emaill_2 {
+        compatible = "zmk,behavior-macro";
+        label = "volvo_emaill_2";
+        #binding-cells = <0>;
+        bindings
+            = <&macro_tap &kp RA(N2)>
+            , <&macro_tap &kp C &kp O &kp N &kp S &kp U &kp L &kp T &kp A &kp N &kp T>
+            , <&macro_tap &kp DOT &kp V &kp O &kp L &kp V &kp O>
+            , <&macro_tap &kp DOT &kp C &kp O &kp M>
+            ;
+    };
+    
+    my_pass: my_pass {
+        compatible = "zmk,behavior-macro";
+        label = "my_pass";
+        #binding-cells = <0>;
+        bindings
+            = <&macro_tap &kp LS(A)>;
+    };
