--- a/config/boards/arm/adv360/adv360_right_defconfig
+++ b/config/boards/arm/adv360/adv360_right_defconfig
@@ -42,8 +42,8 @@ CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
 #Backlighting configuration
 CONFIG_PWM=y
 CONFIG_LED_PWM=y
-CONFIG_ZMK_BACKLIGHT=n
-CONFIG_ZMK_BACKLIGHT_BRT_START=20
+CONFIG_ZMK_BACKLIGHT=y
+CONFIG_ZMK_BACKLIGHT_BRT_START=0
 CONFIG_ZMK_BACKLIGHT_AUTO_OFF_IDLE=y
 
 #Misc configuration
